--- a/_posts/2016-12-08-yitzhak.md
+++ b/_posts/2016-12-08-yitzhak.md
@@ -4,6 +4,7 @@ title:  "Yitzhak"
 date:   2016-12-08 19:50:12 -0200
 categories: jekyll update
 language: br
+summary: Breve descrição sobre o post2
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
